[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/sprites/enemy/death_particle_00.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/enemy/death_particle_01.png" type="Texture" id=2]
[ext_resource path="res://scripts/DeathParticles.gd" type="Script" id=3]
[ext_resource path="res://nodes/DeathParticlesMaterial.tres" type="Material" id=4]

[node name="DeathParticles" type="Node2D"]
script = ExtResource( 3 )

[node name="Particles2" type="Particles2D" parent="."]
emitting = false
amount = 64
one_shot = true
explosiveness = 1.0
process_material = ExtResource( 4 )
texture = ExtResource( 2 )

[node name="Particles1" type="Particles2D" parent="."]
emitting = false
amount = 64
one_shot = true
explosiveness = 1.0
process_material = ExtResource( 4 )
texture = ExtResource( 1 )

[node name="RemoveTimer" type="Timer" parent="."]
one_shot = true
autostart = true
